# The-AUC-Network

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md  auc_network.db  test_message.cpp
client/: CMakeLists.txt  CreateRoomDialog.cpp  CreateRoomDialog.h  TestGUIMain.cpp  TestWindow.cpp  TestWindow.h
client/include/: Client.h  MainWindow.h
client/src/: Client.cpp  MainWindow.cpp  main.cpp
client/ui/: MainWindow.cpp  MainWindow.h
client/ui/pages/: HomePage.cpp  HomePage.h  LoginPage.cpp  LoginPage.h  MainShell.cpp  MainShell.h  RegisterPage.cpp  RegisterPage.h
client/ui/panels/: ChatPanel.cpp  ChatPanel.h  FilesPanel.cpp  FilesPanel.h  ForumPanel.cpp  ForumPanel.h  MarketplacePanel.cpp  MarketplacePanel.h  OpportunitiesPanel.cpp  OpportunitiesPanel.h  ProfilePanel.cpp  ProfilePanel.h  UsersSidebar.cpp  UsersSidebar.h
client/ui/theme/: Theme.h
data/: network.db-shm  network.db-wal
server/: CMakeLists.txt
server/database/: Database.cpp  Database.h
server/include/: Dispatcher.h  Server.h  Session.h
server/models/: ChatRoom.h  FileRecord.h  ForumPost.h  Listing.h  Opportunity.h  UserRecord.h
server/networking/: Dispatcher.cpp  Server.cpp  Session.cpp
server/services/: AIService.cpp  AIService.h  AuthService.cpp  AuthService.h  ChatService.cpp  ChatService.h  FileStorageService.cpp  FileStorageService.h  ForumService.cpp  ForumService.h  MarketplaceService.cpp  MarketplaceService.h  OpportunityService.cpp  OpportunityService.h  ProfileService.cpp  ProfileService.h  RegistrationService.cpp  RegistrationService.h
server/src/: main.cpp
server/store/: Database.cpp  Database.h  InMemoryStore.cpp  InMemoryStore.h
server/uploads/: 25949d9bafcfabf8_CMakeLists.txt  da6f85e4039b31cf_CMakeLists.txt  e1b3e37590e5907_CMakeLists.txt  e7f8db1f3b925a9b_TestGUIMain.cpp  f2bc4c88e9257d6d_CMakeLists.txt
shared/: AuthToken.h  CMakeLists.txt
shared/include/: Message.h  User.h
shared/src/: Message.cpp  User.cpp
tests/: CMakeLists.txt  test_message.cpp
uploads/: 257348993c0f3b2a_CMakeLists.txt  36659c091be35e4a_CMakeLists.txt  3f5a057bf6baf550_test_cone_animation(3).py  65369d49a10eaebb_README.md  c6e1e6e92dd95ff2_metadata.yaml.bak
